[package]
name = "rust-hello"
version = "0.1.0"
authors = ["Daniel Axtens <dja@axtens.net>"]
edition = "2018"

[lib]
crate_type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic="abort"

[dependencies]
cty = "^0.2"


